# APMSample

./: README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
apm-plugins/: build.gradle  gradle.properties
app/: build.gradle  proguard-rules.pro
app/build-files/: demo.keystore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AppJNI.cpp  CMakeLists.txt  native_leak.cpp  native_leak.h
app/src/main/res/layout/: activity_base_performance.xml  activity_main.xml  activity_memory_leak.xml  list_item_case.xml  view_anr_log.xml  view_cache_manager.xml  view_dup_image_file.xml  view_manage_image.xml  view_memory_leak.xml  view_plt_hook.xml  view_process.xml  view_thread.xml  view_wild_thread.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
base/: consumer-rules.pro
base/src/main/: AndroidManifest.xml
faker/: build.gradle
faker/src/main/: AndroidManifest.xml
gradle/: java-publish.gradle
gradle/wrapper/: gradle-wrapper.properties
memory/: build.gradle  consumer-rules.pro
memory/src/main/: AndroidManifest.xml
memory/src/main/cpp/: AnrLogPrinter.cpp  AnrLogPrinter.h  CMakeLists.txt  Hooks.h  MemoryAllocTracker.cpp  MemoryAllocTracker.h  MemoryJNI.cpp  MemoryThread.cpp  MemoryThread.h
xhook/: CMakeLists.txt  build.gradle
xhook/src/androidTest/java/xyz/yorek/xhook/: ExampleInstrumentedTest.kt
xhook/src/main/: AndroidManifest.xml
xhook/src/main/cpp/: xh_core.c  xh_elf.c  xh_elf.h
xhook/src/test/java/xyz/yorek/xhook/: ExampleUnitTest.kt
(+76 files in other folders)
